# rp2040-ultrasonic-communication

./: Cargo.toml  README.md  UltrasonicCommunication.maxpat  ultrasonic_oscillator.maxpat
.cargo/: config.toml
src/: main.rs  rp2040_pll_settings_for_48khz_audio.rs  vreg.rs
